# cxx_vulkan_seed

./: .travis.yml  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  README.md
{{cookiecutter.project_name}}/benchmark/: CMakeLists.txt  mult_bench.cpp
{{cookiecutter.project_name}}/cmake/: genrev.cmake
{{cookiecutter.project_name}}/dependencies/: CMakeLists.txt
{{cookiecutter.project_name}}/docs/: CMakeLists.txt  conf.py  index.rst
{{cookiecutter.project_name}}/examples/: CMakeLists.txt  example1.cpp
{{cookiecutter.project_name}}/tests/: CMakeLists.txt  add_test.h  mult_test.h  symbolic_test.cpp
{{cookiecutter.project_name}}/{{cookiecutter.source_folder}}/: CMakeLists.txt  logger.cpp  logger.h  main.cpp  symbolic.cpp  symbolic.h
